# cv-orchestrator

./: .gitignore  Dockerfile  README.md  api.py  pyproject.toml  requirements.txt
api_spec/: API_spec.md
functions/orchestrator/: data_fetcher.py  eport_orchestrator_service.py  job_normalizer.py  profile_normalizer.py  role_normalizer.py
functions/utils/: json_naming_converter.py  settings.py
parameters/: config.yaml  parameters.yaml
schemas/: input_schema.py  output_schema.py  stage0_schema.py
tests/: gcp_api_actual_tests.py  local_api_actual_tests.py  test_api_rest_update.py  test_generate_cv_endpoint.py  test_json_naming_converter.py
